Bug 1596937 - Fixed clipping of "no email warning" when editing calendar properties. r=pmorris
--HG--
extra : rebase_source : 585565b33770888cb8ac15a2d981789b33925946

--- a/mail/base/content/notification.css
+++ b/mail/base/content/notification.css
@@ -26,6 +26,10 @@ notification[value="draftMsgContent"] > hbox > .messageImage {
   list-style-image: url("chrome://messenger/skin/icons/newmsg.svg");
 }
 
+.notification-inline {
+  display: block;
+}
+
 .notification-inline notification {
   border-width: 1px;
   border-radius: 2px;
